WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258633
Fix page load hang due to empty srcObject on HTMLMediaElement
https://bugs.webkit.org/show_bug.cgi?id=258633
Summary
Fix page load hang due to empty srcObject on HTMLMediaElement
Chirag M Shah
Reported
2023-06-28 12:09:00 PDT
rdar://111155451
Attachments
Add attachment
proposed patch, testcase, etc.
Chirag M Shah
Comment 1
2023-06-28 12:10:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15375
EWS
Comment 3
2023-06-28 16:29:35 PDT
Committed
265601@main
(6f4718092396): <
https://commits.webkit.org/265601@main
> Reviewed commits have been landed. Closing PR #15375 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug