Fix page load hang due to empty srcObject on HTMLMediaElement https://bugs.webkit.org/show_bug.cgi?id=258633 rdar://111155451

Reviewed by Eric Carlson.

This change fixes the page load which never finishes when the source
object is an empty blob. This happened because we don't treat it the
same as we do the source attribute, which results in the noneSupported()
error handler from not being called.

* LayoutTests/media/media-src-empty-page-load-hang-expected.txt: Added.
* LayoutTests/media/media-src-empty-page-load-hang.html: Added.
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::selectMediaResource):

Canonical link: https://commits.webkit.org/265601@main